<resources>
    <string name="app_name">Pantry</string>

    <string name="banner_ad_main">ca-app-pub-6249722927072095/5291186962</string>
    <string name="banner_ad_list">ca-app-pub-6249722927072095/4115504969</string>
    <string name="banner_ad_map">ca-app-pub-6249722927072095/5592238161</string>
    <string name="banner_ad_about">ca-app-pub-6249722927072095/2499170960</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_items">AddItems</string>
    <string name="title_activity_copyright">CopyrightActivity</string>
    <string name="copyright1"> A. General Information
If the location services (GPS features) are turned on for your device, we collect that information in order to provide you with a route to your destination. In the case it is turned off, we require you to select a location as your starting point and do not collect any data from the device.
   </string>
   <string name="copyright2"> B. Data Storage
No data related to the user or the device is stored in our servers. The location data collected is used for the sole purpose of creating a route and is deleted afterwards.
Central Institute of Technology uses third-party vendors and hosting partners to provide the necessary hardware, software, networking, storage and related technology required to run the Central Wayfinder software and the Website related to it.
   </string>
   <string name="copyright3"> C. Changes
Central Institute of Technology may update this policy at anytime. Any changes will be displayed on the Website for the Central Wayfinder software and the latest version is going to be available on both the mobile application and the website related to it.
   </string>
    <string name="Copyright">Copyright</string>
    <string name="open_location_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="no_list_data">There are no lists to display</string>
    <string name="title_activity_edit_list">Edit List</string>
    <string name="title_activity_main__locations">Main_Locations</string>
    <string name="title_activity_main_locations">Main Locations</string>
    <string name="title_activity_edit_store">Edit Store</string>
    <string name="title_activity_edit_notification">Edit Notification</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="titleImageDesc">Title Image</string>
    <string name="name">Name:</string>
    <string name="catagory">Catagory:</string>
    <string-array name="menu_items">
        <item>All Lists</item>
        <item>Work</item>
        <item>Personal</item>
        <item>Daily Reminders</item>
        <item>Saved Stores</item>
        <item>About Page</item>
    </string-array>
    <string name="add_button_description">Add Button</string>
    <string name="Category">Category</string>
    <string name="about_text">Pantry Application 2015</string>
    <string name="title_activity_google_map">Map</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <!-- Maps -->
    <string name="search_results">Search Results</string>
    <string name="title_activity_maps">Map</string>


    <!-- Notifications -->
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Repeat">Repeat</string>

    <!-- Spinner String for Date -->
    <string-array name="date_options">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Next Week</item>
        <item>Set Date</item>
    </string-array>


    <!-- Spinner Strings for Time options-->
    <string-array name="time_options">
        <item>Morning -- 9:00</item>
        <item>Noon  --  12:00</item>
        <item>Evening-- 17:00</item>
        <item>Night --  21:00</item>
        <item>Set Time</item>
    </string-array>


    <!-- Strings for the geofence errors-->
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>




    <!-- Geofence Trasiontion Types -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>



    <!-- When Geofence NotificationActivity is triggerd -->
    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <!-- Google Play services cannot connect -->
    <string name="google_api_not_connected">Could not connect to google play</string>


</resources>
