<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/copyright">
   <!-- Add toolbar on this page-->
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">

    </include>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Copyright"
        android:id="@+id/title"
        android:textSize="24dp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/tool_bar"
        android:layout_centerHorizontal="true" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_marginTop="135dp"

        android:layout_height="350dp"
        android:visibility="visible"
        android:touchscreenBlocksFocus="false"
        android:transitionGroup="false"
        android:importantForAccessibility="auto"
        android:focusable="false">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="105dp"
                android:text="@string/copyright1"
                android:id="@+id/textView1" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="138dp"
                android:text="@string/copyright2"
                android:id="@+id/textView2" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:text="@string/copyright3"
                android:id="@+id/textView3"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>