<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="codefactory.esy2shop.activites.NotificationActivity">


    <!--  Date Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Date"
            android:id="@+id/date_text_view" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_spinner" />


    </LinearLayout>


    <!-- Time Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_layout"
        android:orientation="horizontal"
        android:layout_below="@+id/date_layout"
        android:layout_alignLeft="@+id/date_layout"
        android:layout_alignStart="@+id/date_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Time"
            android:id="@+id/time_text_view" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_spinner" />


    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Date"
        android:id="@+id/add_date_note_button"
        android:layout_below="@+id/time_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="addDateNotification"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Geo"
        android:id="@+id/add_geo_note_button"
        android:layout_below="@+id/time_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="addGeoNotification"/>



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/add_geo_note_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/notification_add_view" />


    <!-- Banner Add -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/notification_add_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_main"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>




</RelativeLayout>
